# osml-playground

./: pyproject.toml
FunASR/: sense-voice.ipynb
crewai/: tutorial.ipynb
surprise_trip/: trip.ipynb
