[project]
name = "osml-playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crewai[tools]>=1.5.0",
    "funasr>=1.2.6",
    "numpy>=2.2.6",
    "torch==2.2.2",
    "torchaudio>=2.2.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]
